# privacy-pools-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  TESTING.md  bunfig.toml  package-lock.json  package.json  tsconfig.json
docs/: coverage-baseline.json  errors.md  glossary.csv  performance.md  reference-static-sections.md  reference.md  runtime-upgrades.md  style-guide.md  testing.md
native/shell/: Cargo.toml  build.rs
native/shell/src/: bridge.rs  completion.rs  config.rs  contract.rs  dispatch.rs  error.rs  http_client.rs  json.rs  known_addresses.rs  main.rs  output.rs  read_only_api.rs  root_argv.rs  routing.rs
native/shell/src/commands/: activity.rs  mod.rs  pools.rs  stats.rs
native/shell/src/commands/activity/: format.rs  mod.rs  normalize.rs  options.rs  render.rs
native/shell/src/commands/pools/: helpers.rs  model.rs  query.rs  query_chain_selection.rs  query_execution.rs  query_resolution.rs  render.rs  rpc.rs  rpc_abi.rs  rpc_cache.rs  rpc_token.rs  rpc_transport.rs  stats.rs
native/shell/src/commands/pools/activity/: format.rs  mod.rs  model.rs  normalize.rs  options.rs  render.rs
native/shell/tests/: cli_dispatch.rs  golden_parity.rs  mode_resolution_parity.rs  public_readonly.rs
native/shell/tests/support/: mod.rs
schemas/: accounts.schema.json  activity.schema.json  broadcast.schema.json  capabilities.schema.json  completion.schema.json  config.get.schema.json  config.list.schema.json  config.path.schema.json  config.profile.active.schema.json  config.profile.create.schema.json  config.schema.json  (+47 more)
(+884 files in other folders)
