[package]
name = "privacy-pools-cli-native-shell"
version = "1.7.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
secp256k1 = { version = "0.31.1", features = ["global-context"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ureq = { version = "2.12.1", features = ["json"] }
